--- a/Estilos/estyle.css
+++ b/Estilos/estyle.css
@@ -1,6 +1,13 @@
 @charset "UTF-8";
 
+
 *{
+    width: 0px;
+    height: 0px;
+}
+
+
+html, body{
     height: 100vh;
     width: 100vw;
 }
@@ -9,7 +16,7 @@ body{
     background-image: url('../pacote-d013/imagens/fundo-madeira.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    position: fixed;
 }
 
 #telefone{
@@ -20,4 +27,13 @@ body{
     width: 311px;
     height: 627px;
     background-image: url(../pacote-d013/imagens/frame-iphone.png);
+}
+
+iframe#tela{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    translate: -50% -50%;
+    width: 268px;
+    height: 473px;
 }
